<resources>
    <string name="app_name">MobDevCw1</string>
    <string name="new_game">New Game</string>
    <string name="about">about</string>
    <string name="author">Author</string>
    <string name="ravindu_hasith_liyanaarachchi">Ravindu Hasith Liyanaarachchi</string>
    <string name="w1810015">w1810015</string>
    <string name="i_confirm_that_i_understand_what_plagiarism_is_and_have_read_and_understood_the_section_on_assessment_offences_in_the_essential_information_for_students_the_work_that_i_have_submitted_is_entirely_my_own_any_work_from_other_authors_is_duly_referenced_and_acknowledged">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="ok">OK</string>
    <string name="greater">greater</string>
    <string name="less">less</string>
    <string name="equal">==</string>
    <string name="time_left">50</string>
    <string name="total_correct">Total Correct :</string>
    <string name="total_wrong">Total Wrong :</string>

</resources>